[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Main.gd" type="Script" id=3]
[ext_resource path="res://src/Trees.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/TallGrass.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Fairy Log.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/TutorialPopup.gd" type="Script" id=8]
[ext_resource path="res://src/Burrow.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Menus/Courier_Prime/CourierPrime-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 10 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 3 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" parent="Navigation2D" instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 65537, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 65536, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 131073, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 2, 0, 65555, 2, 0, 65556, 2, 0, 65557, 2, 0, 65558, 2, 0, 65559, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 1, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 65536, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 131092, 2, 0, 131093, 2, 0, 131094, 2, 0, 131095, 2, 0, 131096, 2, 0, 196608, 2, 0, 196609, 2, 1, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 196628, 2, 65536, 196629, 2, 0, 196630, 2, 0, 196631, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 2, 0, 262163, 2, 0, 262164, 2, 0, 262165, 2, 0, 262166, 2, 0, 262167, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 65536, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 65536, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 2, 0, 327703, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 1, 393226, 2, 0, 393227, 2, 131072, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 393235, 2, 0, 393236, 2, 0, 393237, 2, 0, 393238, 2, 0, 393239, 2, 0, 458752, 2, 0, 458753, 2, 65537, 458754, 2, 0, 458755, 2, 0, 458756, 2, 131073, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 2, 0, 458771, 2, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 65536, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0, 524307, 2, 0, 524308, 2, 65537, 524309, 2, 131072, 524310, 2, 0, 524311, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 65536, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 65537, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 65537, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 655383, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 65537, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0, 720916, 2, 0, 720917, 2, 0, 720918, 2, 0, 720919, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 2, 0, 786452, 2, 0, 786453, 2, 0, 786454, 2, 0, 786455, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 65537, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851987, 2, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0, 851991, 2, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 65537, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 131072, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 65536, 917525, 2, 0, 917526, 2, 0, 917527, 2, 0, 983040, 2, 0, 983041, 2, 0, 983042, 2, 0, 983043, 2, 0, 983044, 2, 0, 983045, 2, 0, 983046, 2, 0, 983047, 2, 0, 983048, 2, 0, 983049, 2, 0, 983050, 2, 0, 983051, 2, 0, 983052, 2, 0, 983053, 2, 0, 983054, 2, 0, 983055, 2, 0, 983056, 2, 0, 983057, 2, 0, 983058, 2, 0, 983059, 2, 0, 983060, 2, 0, 983061, 2, 0, 983062, 2, 0, 983063, 2, 0, 1048576, 2, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 2, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 2, 0, 1048585, 2, 0, 1048586, 2, 0, 1048587, 2, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 1048593, 2, 0, 1048594, 2, 0, 1048595, 2, 0, 1048596, 2, 0, 1048597, 2, 0, 1048598, 2, 0, 1048599, 2, 0, 1048600, 2, 0, 1114112, 2, 0, 1114113, 2, 0, 1114114, 2, 0, 1114115, 2, 0, 1114116, 2, 0, 1114117, 2, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 2, 0, 1114121, 2, 0, 1114122, 2, 0, 1114123, 2, 0, 1114124, 2, 0, 1114125, 2, 0, 1114126, 2, 0, 1114127, 2, 0, 1114128, 2, 0, 1114129, 2, 0, 1114130, 2, 0, 1114131, 2, 0, 1114132, 2, 0, 1114133, 2, 0, 1114134, 2, 0, 1114135, 2, 0, 1114136, 2, 0, 1179648, 2, 0, 1179649, 2, 0, 1179650, 2, 0, 1179651, 2, 0, 1179652, 2, 0, 1179653, 2, 0, 1179654, 2, 65537, 1179655, 2, 0, 1179656, 2, 0, 1179657, 2, 0, 1179658, 2, 0, 1179659, 2, 0, 1179660, 2, 0, 1179661, 2, 131072, 1179662, 2, 0, 1179663, 2, 0, 1179664, 2, 0, 1179665, 2, 0, 1179666, 3, 65538, 1179667, 3, 2, 1179668, 3, 2, 1179669, 3, 2, 1179670, 3, 2, 1179671, 3, 3, 1179672, 2, 0, 1245184, 2, 0, 1245185, 2, 0, 1245186, 2, 0, 1245187, 2, 0, 1245188, 2, 0, 1245189, 2, 0, 1245190, 2, 0, 1245191, 2, 0, 1245192, 2, 0, 1245193, 2, 0, 1245194, 2, 0, 1245195, 2, 0, 1245196, 2, 0, 1245197, 2, 0, 1245198, 2, 65536, 1245199, 2, 0, 1245200, 3, 65538, 1245201, 3, 2, 1245202, 3, 524288, 1245203, 3, 0, 1245204, 3, 0, 1245205, 3, 0, 1245206, 3, 0, 1245207, 3, 1, 1245208, 2, 0, 1310720, 2, 0, 1310721, 2, 0, 1310722, 2, 131072, 1310723, 2, 0, 1310724, 2, 0, 1310725, 2, 0, 1310726, 2, 0, 1310727, 2, 0, 1310728, 2, 0, 1310729, 2, 0, 1310730, 2, 65537, 1310731, 2, 0, 1310732, 2, 0, 1310733, 2, 0, 1310734, 2, 0, 1310735, 2, 0, 1310736, 3, 65536, 1310737, 3, 0, 1310738, 3, 0, 1310739, 3, 0, 1310740, 3, 0, 1310741, 3, 0, 1310742, 3, 0, 1310743, 3, 1, 1310744, 2, 0, 1376256, 2, 0, 1376257, 2, 0, 1376258, 2, 0, 1376259, 2, 0, 1376260, 2, 0, 1376261, 2, 0, 1376262, 2, 0, 1376263, 2, 0, 1376264, 2, 0, 1376265, 2, 0, 1376266, 2, 0, 1376267, 2, 0, 1376268, 2, 0, 1376269, 2, 0, 1376270, 2, 0, 1376271, 2, 0, 1376272, 3, 65536, 1376273, 3, 0, 1376274, 3, 0, 1376275, 3, 0, 1376276, 3, 0, 1376277, 3, 0, 1376278, 3, 0, 1376279, 3, 1, 1441792, 2, 0, 1441793, 2, 0, 1441794, 2, 0, 1441795, 2, 65536, 1441796, 2, 0, 1441797, 2, 0, 1441798, 2, 0, 1441799, 2, 0, 1441800, 2, 0, 1441801, 2, 0, 1441802, 2, 0, 1441803, 2, 0, 1441804, 2, 0, 1441805, 2, 0, 1441806, 2, 0, 1441807, 2, 0, 1441808, 3, 65536, 1441809, 3, 0, 1441810, 3, 0, 1441811, 3, 0, 1441812, 3, 0, 1441813, 3, 0, 1441814, 3, 0, 1441815, 3, 1, 1507328, 2, 0, 1507329, 2, 0, 1507330, 2, 0, 1507331, 2, 0, 1507332, 2, 0, 1507333, 2, 0, 1507334, 2, 0, 1507335, 2, 0, 1507336, 2, 0, 1507337, 2, 0, 1507338, 2, 0, 1507339, 2, 0, 1507340, 2, 0, 1507341, 2, 0, 1507342, 2, 0, 1507343, 2, 0, 1507344, 3, 196608, 1507345, 3, 131072, 1507346, 3, 131072, 1507347, 3, 131072, 1507348, 3, 131072, 1507349, 3, 131072, 1507350, 3, 131072, 1507351, 3, 131073, 1572885, 2, 0, 1572886, 2, 0, 1572887, 2, 0 )
randomizeMap = false

[node name="Trees" parent="Navigation2D" instance=ExtResource( 4 )]
tile_data = PoolIntArray( -131075, 0, 65537, -131074, 0, 131073, -131073, 0, 131073, -196608, 0, 131073, -196607, 0, 131073, -196606, 0, 131073, -196605, 0, 131073, -196604, 0, 131073, -196603, 0, 131073, -196602, 0, 131073, -196601, 0, 131073, -196600, 0, 65537, -65539, 0, 65538, -65538, 0, 65537, -65537, 0, 65537, -131072, 0, 65537, -131071, 0, 65537, -131070, 0, 65537, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 65537, -131066, 0, 65537, -131065, 0, 65537, -131064, 0, 65536, -3, 0, 65538, -2, 0, 65537, -1, 0, 0, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 2, -65529, 0, 65537, -65528, 0, 65536, 65533, 0, 65538, 65534, 0, 65537, 65535, 0, 65536, 6, 0, 65538, 7, 0, 65537, 8, 0, 65536, 131069, 0, 65538, 131070, 0, 65537, 131071, 0, 65536, 65542, 0, 65538, 65543, 0, 65537, 65544, 0, 65536, 196605, 0, 65538, 196606, 0, 65537, 196607, 0, 65536, 131078, 0, 65538, 131079, 0, 65537, 131080, 0, 65536, 262141, 0, 65538, 262142, 0, 65537, 262143, 0, 65536, 196614, 0, 65538, 196615, 0, 65537, 196616, 0, 65536, 327677, 0, 65538, 327678, 0, 65537, 327679, 0, 65536, 262150, 0, 65538, 262151, 0, 65537, 262152, 0, 65536, 393213, 0, 65538, 393214, 0, 65537, 393215, 0, 65536, 327686, 0, 65538, 327687, 0, 65537, 327688, 0, 65536, 458749, 0, 65538, 458750, 0, 65537, 458751, 0, 131072, 393216, 0, 131073, 393217, 0, 131073, 393218, 0, 131073, 393219, 0, 131073, 393220, 0, 131073, 393221, 0, 131073, 393222, 0, 131074, 393223, 0, 65537, 393224, 0, 65536, 524285, 0, 65538, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65536, 589821, 0, 65537, 589822, 0, 1, 589823, 0, 1, 524288, 0, 1, 524289, 0, 1, 524290, 0, 1, 524291, 0, 1, 524292, 0, 1, 524293, 0, 1, 524294, 0, 1, 524295, 0, 1, 524296, 0, 65537 )

[node name="TallGrass" parent="." instance=ExtResource( 5 )]
tile_data = PoolIntArray( 16, 0, 65538, 17, 0, 2, 18, 0, 2, 19, 0, 2, 20, 0, 2, 21, 0, 2, 22, 0, 2, 23, 0, 3, 65552, 0, 65536, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 1, 131088, 0, 65536, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 1, 196624, 0, 196608, 196625, 0, 524290, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 1, 262161, 0, 65536, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 1, 327697, 0, 65536, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 1, 393233, 0, 196608, 393234, 0, 655360, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 1, 458770, 0, 196608, 458771, 0, 131072, 458772, 0, 131072, 458773, 0, 131072, 458774, 0, 131072, 458775, 0, 131073, 720896, 0, 65538, 720897, 0, 3, 786432, 0, 65536, 786433, 0, 720896, 786434, 0, 3, 851968, 0, 65536, 851969, 0, 0, 851970, 0, 720896, 851971, 0, 3, 917504, 0, 65536, 917505, 0, 0, 917506, 0, 0, 917507, 0, 1, 983040, 0, 65536, 983041, 0, 0, 983042, 0, 0, 983043, 0, 1, 1048576, 0, 65536, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 720896, 1048580, 0, 3, 1114112, 0, 196608, 1114113, 0, 655360, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 1, 1179649, 0, 196608, 1179650, 0, 131072, 1179651, 0, 131072, 1179652, 0, 131073 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="TutorialPopup" type="AcceptDialog" parent="HUD"]
pause_mode = 2
margin_left = 128.0
margin_top = 144.0
margin_right = 608.0
margin_bottom = 449.0
window_title = "Operation: Wonderland"
script = ExtResource( 8 )

[node name="Text" type="Label" parent="HUD/TutorialPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -144.5
margin_right = 232.0
margin_bottom = 116.5
custom_fonts/font = SubResource( 1 )
text = "Good work! You've completed the tutorial!

There are two other available structures: the Healing Tower and the Bear Trap. The Healing Tower will heal you and your structures every few seconds, and the Bear Trap will catch any enemy that walks into it.

You can re-activate this spawner by pressing E on it. Feel free to experiment with the structures, and click Finish when you are ready to move on."
autowrap = true

[node name="TransitionTimer" type="Timer" parent="HUD/TutorialPopup"]
wait_time = 0.05
one_shot = true

[node name="Finish" type="Button" parent="HUD"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -116.0
margin_right = -164.0
margin_bottom = -91.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Finish"

[node name="TileHighlight" type="ColorRect" parent="."]
visible = false
margin_right = 128.0
margin_bottom = 128.0
mouse_filter = 2
color = Color( 1, 1, 0, 0.215686 )

[node name="Bones" type="Node2D" parent="."]

[node name="Burrows" type="Node2D" parent="."]

[node name="Burrow" parent="Burrows" instance=ExtResource( 9 )]
position = Vector2( 736, 864 )
enabled = false

[node name="BulletManager" type="Node2D" parent="."]

[node name="Entities" type="YSort" parent="."]

[node name="Player" parent="Entities" instance=ExtResource( 2 )]
position = Vector2( 880, 1376 )
unobtainiumCount = 0
fairyDustCount = 0
dragonOilCount = 0

[node name="EnemyManager" type="YSort" parent="Entities"]
position = Vector2( 0, 2 )

[node name="StructureManager" type="YSort" parent="Entities"]

[node name="Fairy Log" parent="Entities" instance=ExtResource( 7 )]
position = Vector2( 1344, 832 )

[node name="MiningTimer" type="Timer" parent="."]

[node name="EnemyPathingTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="just_purchased" from="HUD" to="Entities/Player" method="_on_HUD_just_purchased"]
[connection signal="unlocked_fairy_swatter" from="HUD" to="Entities/Player" method="_on_HUD_unlocked_fairy_swatter"]
[connection signal="confirmed" from="HUD/TutorialPopup" to="HUD/TutorialPopup" method="_on_TutorialPopup_confirmed"]
[connection signal="timeout" from="HUD/TutorialPopup/TransitionTimer" to="HUD/TutorialPopup" method="_on_TransitionTimer_timeout"]
[connection signal="pressed" from="HUD/Finish" to="HUD/TutorialPopup" method="_on_Finish_pressed"]
[connection signal="is_interacting" from="Entities/Player" to="HUD" method="_on_Player_is_interacting"]
[connection signal="is_manual_mining" from="Entities/Player" to="HUD" method="_on_Player_is_manual_mining"]
[connection signal="place_structure" from="Entities/Player" to="." method="_on_Player_place_structure"]
[connection signal="place_structure" from="Entities/Player" to="HUD" method="_on_Player_place_structure"]
[connection signal="player_stats_changed" from="Entities/Player" to="HUD" method="_on_Player_player_stats_changed"]
[connection signal="timeout" from="EnemyPathingTimer" to="." method="_on_EnemyPathingTimer_timeout"]
